# openenclave

./: .check-license.ignore  .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json
enclave/: CMakeLists.txt  aes.c  asn1.c  asym_keys.c  attest_plugin.c  cert.c  cmac.c  crl.c  crl.h  csr.c  device.c  device.h  ec.c  ec.h  file_ops.c  hmac.c  init.c  key.c  key.h  mbedtls_corelibc_defs.h  mbedtls_corelibc_undef.h  posix_file.c  posix_socket.c  random.c  random.h  resolver.h  rsa.c  rsa.h  sha.c  sock_ops.c  ssl_stubs.c
enclave/core/: CMakeLists.txt  __secs_to_tm.c  array.c  asmdefs.h  assert.c  backtrace.c  calls.c  chdir.c  corelibc.c  device.c  epoll.c  eventfd.c  exception.c  fd.c  fs.c  fs_ops.c  getcwd.c  gmtime.c  hexdump.c  hostcalls.c  intstr.c  malloc.c  mount.c  printf.c  pthread.c  report.c  reserve.c  resolver.c  resolver_ops.c  sbrk.c  select.c  snprintf.c  sock_ops.c  socket.c  strcspn.c  string.c  syscall.c  time.c
enclave/core/dlmalloc/: stdio.h
enclave/core/linux/: enter.S  exit.S
enclave/core/posix/: common_macros.h  console.c  cwd.c  device.c  epoll.c  epollv2.c  eventfd.c  eventfd_device.c  fd.c  fs.c  getdomainname.c  gethostname.c  hostepoll_device.c  hostfs_device.c  hostresolver_device.c  hostsock_device.c  mount.c  poll.c  realpath.c  resolver.c  select.c  signal.c  socket.c  syscall.c  uname.c
enclave/core/sgx/: asmdefs.h  calls.c  console.c  debugmalloc.c  enter.S  entropy.c  ereport.c  errno.c  exception.c  exit.S  futex.c  globals.c  hostbatch.c  hostcalls.c  hostsock.c  malloc.c  mman.c  once.c  report.c  td.c  td.h
enclave/core/windows/: dispatch.asm  gs_report.c  gshandler.c  gssupport.c  jump.asm  misc.asm  reloc.c  secgs.asm
enclave/crypto/: CMakeLists.txt
enclave/sgx/: main.c  qeidinfo.c  report.c  start.S
enclibc/: .longjmp.S.swp  CMakeLists.txt  assert.c  atexit.c  ctype.c  errno.c  gmtime.c  malloc.c  printf.c  pthread.c  rand.c  sbrk.c  stdio.c  strerror.c  string.c  strtoul.c  time.c
fs/muxfs/: CMakeLists.txt  muxfs.c
fs/oefs/enclave/: CMakeLists.txt  authcryptoblkdev.c  authmerkleblkdev.c  blk.c  blk.h  blkdev.h  buf.c  buf.h  cacheblkdev.c  common.h  cryptoblkdev.c  endian.h  fast_sha256.c  fast_sha256.h  hashlistblkdev.c  hostbatch.c  hostbatch.h  hostblkdev.c  list.h  merkle2blkdev.c  merkle3blkdev.c  merkleblkdev.c  oefs.c  oefs.h  perf.txt  raise.h  ramblkdev.c  sha.c  sha.h  sha256.c  sha256.h  sha256_sse4.asm  sha256_transform.c  todo.txt  trace.h  utils.h
fs/oefs/host/: CMakeLists.txt  hostblkdevocall.c  oefsocall.c
host/linux/: CMakeLists.txt  funcname.c  posix.c  uname.c
host/optee/: CMakeLists.txt
host/optee/linux/: CMakeLists.txt
host/optee/windows/: CMakeLists.txt
host/sgx/: CMakeLists.txt  calls.c  elf.c  exception.c  futex.c  hostverify_report.c  loadelf.c  ocalls.c  ocalls.h  quote.c  report.c  sgxload.c  sgxquote.c  sgxsign.c
libsocket/enc/: CMakeLists.txt  socket_enc.c  socket_enc_insecure.c
protectedfs/host/: CMakeLists.txt  handleocall.c
securefile/enc/: CMakeLists.txt  crypto.c  enc.cpp  file_other.cpp  getkey.c  memset_s.c  ocalls.c
securefile/host/: CMakeLists.txt  host.c
syscall/: CMakeLists.txt
tests/: CMakeLists.txt
tests/crypto/: aes_tests.c  asn1_tests.c  cmac_tests.c  crl_tests.c  ec_tests.c  hash.c  hash.h  random_return_tests.c  random_tests.c  rdrand_test.c  rsa_tests.c  tests.c  tests.h
tests/curl_openssl_client/: CMakeLists.txt
tests/ecall/: CMakeLists.txt
tests/exec/: CMakeLists.txt  exec.edl
tests/ext2/: CMakeLists.txt  ext2.edl
tests/fs/: CMakeLists.txt  alphabet  fs.edl
tests/fuzztests/: CMakeLists.txt  parcesgxextensions.cpp  qeidentityparser.cpp  remote_verify.cpp  tcbinfoparser.cpp
tests/hostfs/: CMakeLists.txt  hostfs.edl
tests/libcsock/: CMakeLists.txt  client.c  server.c
tests/libcxx/: tests.supported.default
tests/libcxx2/: CMakeLists.txt  tests.supported
tests/lockless_queue/: lockless_queue.edl
tests/mbed/: mbed.edl  tests.broken  tests.supported
tests/mman/: CMakeLists.txt  main.c
tests/ocall/: ocall.edl
tests/oefs/: CMakeLists.txt  init.sh  oefs.edl
tests/openssl_server/: CMakeLists.txt
tests/polling/: CMakeLists.txt  epoll_test.edl  socket_test.edl
tests/posix/: CMakeLists.txt
tests/protectedfs/: CMakeLists.txt  protectedfs.edl
tests/resolver/: CMakeLists.txt
tests/sgxfs/: CMakeLists.txt
tests/sockets/: CMakeLists.txt  socket_test.edl
tests/stdcxx/: CMakeLists.txt
tests/syscall/: CMakeLists.txt
tests/thread/: common.cmake
tests/typeinfo/: CMakeLists.txt  main.cpp  typeinfo.idl
tools/oecdb/: CMakeLists.txt  config.cmake  oecdb.cpp
tools/oewrap/: CMakeLists.txt  config  config_openssl  oewrap.cpp  oewraprc  wrap.cpp  wrap.edl
venclave/: CMakeLists.txt  Makefile.bak  todo.txt
venclave/common/: call.c  call.h  fingerprint.c  io.c  msg.c  msg.h
venclave/core/: CMakeLists.txt  Makefile.old  __secs_to_tm.c  assert.c  assert.h  call.c  call.h  calls.c  calls.h  common.h  elf.c  elf.h  elfinfo.c  elfinfo.h  enclave.c  globals.c  globals.h  hexdump.c  hostheap.c  hostheap.h  hostmalloc.c  initfini.c  initfini.h  io.c  io.h  libc.c  libcxx.cpp  libm.c  libvend.c  lock.h  main.c  malloc.c  malloc.h  memmove.c  msg.c  panic.c  print.c  print.h  process.c  process.h  (+15 more)
venclave/enclave/: CMakeLists.txt  assert.h  call.c  common.h  enclave.c  futex.h  hexdump.h  main.c  malloc.c  malloc.h  panic.h  process.c  process.h  restore.S  result.c  shm.c  signal.c  signal.h  string.c  syscall.c  syscall.h  test.c  thread.c  thread.h  time.c  time.h
venclave/fingerprint/: CMakeLists.txt  main.c
venclave/freestanding/: Makefile  libc.c  main.c
venclave/freestandingcxx/: Makefile  libc.c  libcxx.cpp  libf.c  main.cpp  malloc.c  syscall.h
venclave/host/: CMakeLists.txt  call.c  call.h  calls.c  calls.h  elf.c  elf.h  enclave.c  enclave.h  err.c  err.h  heap.c  heap.h  host.c  hostmalloc.c  io.c  log.c  syscall.c  test_u_wrap.c  trace.h
venclave/proxy/: CMakeLists.txt  proxy.edl
venclave/sample/: CMakeLists.txt  run
venclave/samples/: CMakeLists.txt  info  link-info  valgrind.cmake
(+6128 files in other folders)
