# Copyright (c) Microsoft Corporation. All rights reserved.
# Licensed under the MIT License.

include(oeedl_file)
include(${PROJECT_SOURCE_DIR}/cmake/get_testcase_name.cmake)

option(ENABLE_FULL_LIBCXX_TESTS "Build all libcxx tests and include in test list" OFF)

if(ENABLE_FULL_LIBCXX_TESTS)
    message("ENABLE_FULL_LIBCXX_TESTS set - building all libcxx tests")
else()
    message("ENABLE_FULL_LIBCXX_TESTS not set - building some libcxx tests")
endif()

if (WIN32_SIMULATION)
  message("WIN32_SIMULATION set, failing tests are skipped")
endif ()

#ATTN:VENCLAVE: add_subdirectory(lockless_queue)
add_subdirectory(mem)
add_subdirectory(safecrt)
add_subdirectory(safemath)
add_subdirectory(str)

if (OE_SGX)
add_subdirectory(aesm)
#ATTN:VENCLAVE: add_subdirectory(debugger)
endif()

if (UNIX OR ADD_WINDOWS_ENCLAVE_TESTS OR USE_CLANGW)
    if (OE_SGX)
        # The following tests currently fail in Windows simulation mode
        if (NOT WIN32_SIMULATION)
            #ATTN:VENCLAVE: add_subdirectory(abortStatus)
            #ATTN:VENCLAVE: add_subdirectory(cppException)
            add_subdirectory(ecall)
            add_subdirectory(file)
            add_subdirectory(mbed)
            #ATTN:VENCLAVE: add_subdirectory(ocall-create)
            #ATTN:VENCLAVE: add_subdirectory(oeedger8r)
            #ATTN:VENCLAVE: add_subdirectory(stdcxx)
            #ATTN:VENCLAVE: add_subdirectory(thread)
            #ATTN:VENCLAVE: add_subdirectory(threadcxx)
            #ATTN:VENCLAVE: add_subdirectory(thread_local)
            add_subdirectory(thread_local_no_tdata)
        endif()
        #ATTN:VENCLAVE: add_subdirectory(backtrace)
        #ATTN:VENCLAVE: add_subdirectory(bigmalloc)
        #ATTN:VENCLAVE: add_subdirectory(debug-mode)
        add_subdirectory(echo)
        add_subdirectory(enclaveparam)
        add_subdirectory(getenclave)
        add_subdirectory(hostcalls)
        #ATTN:VENCLAVE: add_subdirectory(libc)
        #ATTN:VENCLAVE(TSD destructor not called): add_subdirectory(ocall).
        add_subdirectory(print)
        #ATTN:VENCLAVE: add_subdirectory(props)
        add_subdirectory(SampleApp)
        add_subdirectory(SampleAppCRT)
        #ATTN:VENCLAVE: add_subdirectory(sealKey)
        #ATTN:VENCLAVE: add_subdirectory(stdc)
        add_subdirectory(syscall)
        #ATTN:VENCLAVE: add_subdirectory(VectorException)
    endif()

add_subdirectory(create-errors)
#ATTN:VENCLAVE: add_subdirectory(hexdump)
add_subdirectory(initializers)
add_subdirectory(mixed_c_cpp)
add_subdirectory(pingpong)
#ATTN:VENCLAVE: add_subdirectory(pingpong-shared)
endif()

# Windows test Broken Post #632 issue
if ( UNIX )
    if (OE_SGX)
        #ATTN:VENCLAVE: add_subdirectory(libcxx)
        #ATTN:VENCLAVE: add_subdirectory(libcxxrt)
        #ATTN:VENCLAVE: add_subdirectory(memory)
    endif()
add_subdirectory(create-rapid)
endif()

if (OE_SGX AND UNIX)
   # ecall_ocall enclave size cannot be handled by Windows ninja CI
   add_subdirectory(ecall_ocall)
   #ATTN:VENCLAVE: add_subdirectory(libunwind)
   add_subdirectory(crypto)
   #ATTN:VENCLAVE: add_subdirectory(crypto_crls_cert_chains)

   # Attestation supported only on Linux
   add_subdirectory(qeidentity)
   #ATTN:VENCLAVE: add_subdirectory(report)
   #ATTN:VENCLAVE: add_subdirectory(attestation_cert_apis)
   #ATTN:VENCLAVE: add_subdirectory(tls_e2e)
endif()
