# Copyright (c) Microsoft Corporation. All rights reserved.
# Licensed under the MIT License.

include(oeedl_file)
include(${PROJECT_SOURCE_DIR}/cmake/get_testcase_name.cmake)

option(ENABLE_FULL_LIBCXX_TESTS "Build all libcxx tests and include in test list" OFF)

if(ENABLE_FULL_LIBCXX_TESTS)
    message("ENABLE_FULL_LIBCXX_TESTS set - building all libcxx tests")
else()
    message("ENABLE_FULL_LIBCXX_TESTS not set - building some libcxx tests")
endif()

if (WIN32_SIMULATION)
  message("WIN32_SIMULATION set, failing tests are skipped")
endif ()

if(NOT VENCLAVE)
    add_subdirectory(lockless_queue)
endif()
add_subdirectory(mem)
add_subdirectory(safecrt)
add_subdirectory(safemath)
add_subdirectory(str)

if (OE_SGX)
    add_subdirectory(aesm)
    if(NOT VENCLAVE)
        add_subdirectory(debugger)
    endif()
endif()

if (UNIX OR ADD_WINDOWS_ENCLAVE_TESTS OR USE_CLANGW)
    if (OE_SGX)
        # The following tests currently fail in Windows simulation mode
        if (NOT WIN32_SIMULATION)
            if(NOT VENCLAVE)
                # ATTN: enclave abort handling.
                add_subdirectory(abortStatus)
                # ATTN: enclave abort handling.
                add_subdirectory(cppException)
            endif()
            add_subdirectory(ecall)
            add_subdirectory(file)
            add_subdirectory(mbed)
            add_subdirectory(ocall-create)
            add_subdirectory(oeedger8r)
            add_subdirectory(thread)
            add_subdirectory(threadcxx)
            add_subdirectory(thread_local)
            add_subdirectory(stdcxx)
            add_subdirectory(thread_local_no_tdata)
        endif()
        if(NOT VENCLAVE)
            add_subdirectory(backtrace)
            add_subdirectory(bigmalloc)
            add_subdirectory(debug-mode)
        endif()
        add_subdirectory(echo)
        add_subdirectory(enclaveparam)
        add_subdirectory(getenclave)
        if(NOT VENCLAVE)
            # ATTN: test_host_malloc() writes to host stack pointer.
            add_subdirectory(hostcalls)
            # ATTN: lots of failures.
            add_subdirectory(libc)
            # ATTN: Need to call TSD destructors.
            add_subdirectory(ocall)
        endif()
        add_subdirectory(print)
        if(NOT VENCLAVE)
            add_subdirectory(props)
        endif()
        add_subdirectory(SampleApp)
        add_subdirectory(SampleAppCRT)
        add_subdirectory(sealKey)
        if(NOT VENCLAVE)
            add_subdirectory(stdc)
        endif()
        add_subdirectory(syscall)
        if(NOT VENCLAVE)
            add_subdirectory(VectorException)
        endif()
    endif()

    add_subdirectory(create-errors)
    if(NOT VENCLAVE)
        add_subdirectory(hexdump)
    endif()
    add_subdirectory(initializers)
    add_subdirectory(mixed_c_cpp)
    add_subdirectory(pingpong)
    if(NOT VENCLAVE)
        add_subdirectory(pingpong-shared)
    endif()
endif()

# Windows test Broken Post #632 issue
if ( UNIX )
    if (OE_SGX)
        if(NOT VENCLAVE)
            add_subdirectory(libcxx)
            add_subdirectory(libcxxrt)
        endif()
        add_subdirectory(memory)
    endif()
    if(NOT VENCLAVE)
        add_subdirectory(create-rapid)
    endif()
endif()

if (OE_SGX AND UNIX)
   # ecall_ocall enclave size cannot be handled by Windows ninja CI
   if(NOT VENCLAVE)
       add_subdirectory(ecall_ocall)
       add_subdirectory(libunwind)
   endif()
   add_subdirectory(crypto)
   add_subdirectory(crypto_crls_cert_chains)

   # Attestation supported only on Linux
   add_subdirectory(qeidentity)
   if(NOT VENCLAVE)
       add_subdirectory(report)
       add_subdirectory(attestation_cert_apis)
       add_subdirectory(tls_e2e)
   endif()
endif()

#add_subdirectory(ecall_ocall)
#add_subdirectory(hostcalls)
#add_subdirectory(create-rapid)
#add_subdirectory(libcxx)
#add_subdirectory(libcxxrt)
#add_subdirectory(pingpong-shared)
#add_subdirectory(stdc)
#add_subdirectory(props)
